# past-ctl-monitoring

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WORKSPACE  make.sh
lib/: BUILD  crowd_safety.cpp  crowd_safety.hpp  drones_recognition.cpp  drones_recognition.hpp  logic_samples.cpp  logic_samples.hpp  past_ctl.cpp  past_ctl.hpp  server_discovery.hpp  service_discovery.hpp  smart_grid.hpp  smart_home.cpp  smart_home.hpp
plot/: crowd_safety.asy  drones_recognition.asy  service_discovery.asy  smart_home.asy
run/: crowd_safety.cpp  displayer.cpp  drones_recognition.cpp  server_discovery.cpp  service_discovery.cpp  smart_grid.cpp  smart_home.cpp
textures/: building.xcf
